--- a/src/app/shared/components/navbar-private/navbar-private.component.html
+++ b/src/app/shared/components/navbar-private/navbar-private.component.html
@@ -1,13 +1,14 @@
 <nav class="navbar navbar-expand-lg navbar-light bg-light shadow">
   <div class="container-fluid">
-    <a class="navbar-brand" href="#">Art'Online</a>
+    <i class="fa-solid fa-paintbrush"></i>
+    <a class="navbar-brand">Art'Online</a>
     <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
     <div class="collapse navbar-collapse" id="navbarNav">
       <ul class="navbar-nav">
         <li *ngIf="showShop()" class="nav-item">
-          <a class="nav-link" href="/shop">Magasin</a>
+          <a class="nav-link" href="/shop">Boutique en ligne</a>
         </li>
         <li *ngIf="showProducts()" class="nav-item">
           <a class="nav-link" href="/products">Mes articles</a>
@@ -19,13 +20,13 @@
           <a class="nav-link" href="/invoices">Mes commandes</a>
         </li>
         <li *ngIf="showInvoiceItems()" class="nav-item"> 
-          <a class="nav-link" href="/invoice-items">Gestion des commandes</a>
+          <a class="nav-link" href="/invoice-items">Mes commandes</a>
         </li>
         <li *ngIf="showRates()" class="nav-item"> 
-          <a class="nav-link" href="/rates">Notes</a>
+          <a class="nav-link" href="/rates">Mes notes</a>
         </li>
         <li *ngIf="showFinancialReports()" class="nav-item"> 
-          <a class="nav-link" href="/financial-report">Rapport financiers</a>
+          <a class="nav-link" href="/financial-report">Mes rapport financiers</a>
         </li>
       </ul>
       <button *ngIf="showCart()" class="btn btn-outline-secondary ms-auto me-2" (click)="goToCart()">
@@ -33,6 +34,7 @@
         Panier ({{ numberCart }})
       </button>
       <button class="btn btn-outline-secondary ms-auto me-2" (click)="logout()">
+        <i class="fas fa-sign-out-alt"></i>
         Déconnexion
       </button>
     </div>
