--- a/src/app/products/components/rate-product/rate-product.component.html
+++ b/src/app/products/components/rate-product/rate-product.component.html
@@ -11,7 +11,7 @@
                     <div class="mb-3">
                         <b><label for="description" class="form-label">Qu'avez-vous pensé de l'article ?</label></b>
                         <textarea
-                        formControlName="comment"
+                        formControlName="text"
                         type="textArea"
                         id="description"
                         class="form-control"
