--- a/src/app/products/components/table-rating/table-rating.component.html
+++ b/src/app/products/components/table-rating/table-rating.component.html
@@ -27,7 +27,7 @@
                                     </span>
                                 </td>
                                 <td>
-                                    {{ rating.comment }}
+                                    {{ rating.text }}
                                 </td>
                                 <td>
                                     {{ rating.invoiceItem.name }}
