--- a/src/app/products/components/view-product/view-product.component.html
+++ b/src/app/products/components/view-product/view-product.component.html
@@ -76,7 +76,7 @@
                                         *ngFor="let star of getStars(comment.rate)"
                                     ></i>
                                 </div>
-                                <p class="mb-0 text-muted">{{ comment.comment }}</p>
+                                <p class="mb-0 text-muted">{{ comment.text }}</p>
                                 <small class="text-muted">{{ comment.createdAt | date: 'dd/MM/yyyy' }}</small>
                             </div>
                         </div>
