--- a/src/app/products/components/table-rating/table-rating.component.html
+++ b/src/app/products/components/table-rating/table-rating.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-    <div class="col-md-10">
+    <div class="col-md-12">
         <div class="card shadow-lg rounded-3 my-5">
             <div class="card-header bg-default d-flex justify-content-between align-items-center">
                 <h1 class="mb-0">Mes notes</h1>
@@ -12,6 +12,8 @@
                             <th scope="col">Note</th>
                             <th scope="col">Commentaire</th>
                             <th scope="col">Article</th>
+                            <th scope="col">Date</th>
+                            <th scope="col" class="text-end"></th>
                         </tr>
                     </thead>
                     <tbody>
@@ -31,6 +33,14 @@
                                 </td>
                                 <td>
                                     {{ rating.invoiceItem.name }}
+                                </td>
+                                <td>
+                                    {{ rating.createdAt | date: 'dd/MM/yyyy' }}
+                                </td>
+                                <td class="text-end">
+                                    <button class="btn btn-outline-secondary btn-sm me-2">
+                                        <i class="fas fa-comment"></i>
+                                    </button>
                                 </td>
                             </tr>
                         }
