--- a/src/app/products/components/view-product/view-product.component.html
+++ b/src/app/products/components/view-product/view-product.component.html
@@ -1,5 +1,5 @@
 <div class="row justify-content-center">
-    <div class="col-md-10">
+    <div class="col-md-12">
         <div class="card shadow my-5">
             <div class="row g-0">
                 <!-- Left Column: Product Image -->
@@ -23,7 +23,7 @@
                 <div class="col-md-7">
                     <div class="card-body">
                         <h3 class="card-title">{{ product.name }}</h3>
-                        <p class="text-muted">{{ "category" }}</p>
+                        <p class="text-muted">{{ product.category }}</p>
                         <p class="card-text">
                             <b>Description :</b> {{ product.description }}
                         </p>
@@ -33,10 +33,12 @@
                         <div class="mb-3">
                             <h6>Évaluation :</h6>
                             <div>
-                                <i
-                                    class="fas fa-star text-warning"
-                                    *ngFor="let star of getStars(rating); let i = index"
-                                ></i>
+                                <span *ngFor="let star of [].constructor(rating); let i = index">
+                                    <i class="fa fa-star text-warning"></i>
+                                </span>
+                                <span *ngFor="let star of [].constructor(5 - rating); let i = index">
+                                    <i class="fa fa-star text-secondary"></i>
+                                </span>
                             </div>
                         </div>
 
@@ -69,12 +71,14 @@
                                 <i class="fas fa-user-circle fa-2x text-secondary"></i>
                             </div>
                             <div>
-                                <h6 class="mb-1">{{ comment.user.firstname }}</h6>
+                                <h6 class="mb-1">{{ comment.invoiceItem.user?.firstname }}</h6>
                                 <div class="text-warning mb-1">
-                                    <i
-                                        class="fas fa-star"
-                                        *ngFor="let star of getStars(comment.rate)"
-                                    ></i>
+                                    <span *ngFor="let star of [].constructor(rating); let i = index">
+                                        <i class="fa fa-star text-warning"></i>
+                                    </span>
+                                    <span *ngFor="let star of [].constructor(5 - rating); let i = index">
+                                        <i class="fa fa-star text-secondary"></i>
+                                    </span>
                                 </div>
                                 <p class="mb-0 text-muted">{{ comment.text }}</p>
                                 <small class="text-muted">{{ comment.createdAt | date: 'dd/MM/yyyy' }}</small>
