--- a/src/app/accounting/components/financial-report/financial-report.component.html
+++ b/src/app/accounting/components/financial-report/financial-report.component.html
@@ -2,7 +2,7 @@
     <div class="col-md-12">
         <div class="card shadow-lg rounded-3 my-5">
             <div class="card-header bg-default">
-                <h1 class="mb-0">Produits les plus vendus</h1>
+                <h1 class="mb-0 text-center" >Produits les plus vendus</h1>
             </div>
             <div class="card-body">
                 <table class="table table-striped">
@@ -28,7 +28,7 @@
 
         <div class="card shadow-lg rounded-3 my-5">
             <div class="card-header bg-default">
-                <h1 class="mb-0">Produits rapportant le plus de bénéfices</h1>
+                <h1 class="mb-0 text-center" >Produits rapportant le plus de bénéfices</h1>
             </div>
             <div class="card-body">
                 <table class="table table-striped">
@@ -54,7 +54,7 @@
 
         <div class="card shadow-lg rounded-3 my-5">
             <div class="card-header bg-default">
-                <h1 class="mb-0">Produits les mieux notés</h1>
+                <h1 class="mb-0 text-center" >Produits les mieux notés</h1>
             </div>
             <div class="card-body">
                 <table class="table table-striped">
