--- a/src/app/invoice-items/components/edit-invoice-item/edit-invoice-item.component.html
+++ b/src/app/invoice-items/components/edit-invoice-item/edit-invoice-item.component.html
@@ -1,7 +1,7 @@
 <div class="row justify-content-center">
     <div class="col-md-12">
         <div class="card shadow my-5">
-            <h4 class="card-header">Modification d'une commande</h4>
+            <h1 class="card-header">Visualisation d'une commande</h1>
             <div class="card-body">
                 <div class="mb-3">
                     <b><label for="name" class="form-label">Nom de l'article</label></b>
