--- a/src/app/products/components/table-products/table-products.component.html
+++ b/src/app/products/components/table-products/table-products.component.html
@@ -2,7 +2,7 @@
     <div class="col-md-12">
         <div class="card shadow-lg rounded-3 my-5">
             <div class="card-header bg-default d-flex justify-content-between align-items-center">
-                <h1 class="mb-0">Mes articles</h1>
+                <h1 class="mb-0 text-center" >Mes articles</h1>
                 <button
                     class="btn btn-primary"
                     [routerLink]="['/products/edit']"
