--- a/src/app/products/components/table-rating/table-rating.component.html
+++ b/src/app/products/components/table-rating/table-rating.component.html
@@ -2,7 +2,7 @@
     <div class="col-md-12">
         <div class="card shadow-lg rounded-3 my-5">
             <div class="card-header bg-default d-flex justify-content-between align-items-center">
-                <h1 class="mb-0">Mes notes</h1>
+                <h1 class="mb-0 text-center" >Mes notes</h1>
             </div>
             <div class="card-body">
                 <table class="table table-striped">
