--- a/src/app/users/components/table-users/table-users.component.html
+++ b/src/app/users/components/table-users/table-users.component.html
@@ -1,35 +1,42 @@
 <div class="row justify-content-center">
-    <h1>Utilisateurs</h1>
-    <table class="table table-striped">
-        <thead>
-            <tr>
-                <th scope="col">#</th>
-                <th scope="col">Email</th>
-                <th scope="col">Nom</th>
-                <th scope="col">Prénom</th>
-                <th scope="col" class="text-end"></th>
-           
-            </tr>
-        </thead>
-        <tbody>
-            @for (user of users; track user.id; let i = $index) {
-                <tr>
-                    <th>{{ i + 1 }}</th>
-                    <td >
-                        {{ user.email }}
-                    </td>
-                    <td>{{ user.firstname }}</td>
-                    <td>{{ user.lastname }}</td>
-                    <td class="text-end">
-                        <button 
-                            class="btn btn-outline-danger"
-                            (click)="deleteUser(user.id)"
-                        >
-                            Supprimer
-                        </button>
-                    </td>
-                </tr>
-            }
-        </tbody>
-    </table>
+    <div class="col-md-12">
+        <div class="card shadow-lg rounded-3 my-5">
+            <div class="card-header bg-default d-flex justify-content-between align-items-center">
+                <h1 class="mb-0 text-center" >Utilisateurs</h1>
+            </div>
+            <div class="card-body">
+                <table class="table table-striped">
+                    <thead>
+                        <tr>
+                            <th scope="col">#</th>
+                            <th scope="col">Email</th>
+                            <th scope="col">Nom</th>
+                            <th scope="col">Prénom</th>
+                            <th scope="col" class="text-end"></th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        @for (user of users; track user.id; let i = $index) {
+                            <tr>
+                                <th>{{ i + 1 }}</th>
+                                <td >
+                                    {{ user.email }}
+                                </td>
+                                <td>{{ user.firstname }}</td>
+                                <td>{{ user.lastname }}</td>
+                                <td class="text-end">
+                                    <button 
+                                        class="btn btn-outline-danger"
+                                        (click)="deleteUser(user.id)"
+                                    >
+                                        <i class="fas fa-trash"></i>
+                                    </button>
+                                </td>
+                            </tr>
+                        }
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </div>
 </div>
