Refactor response with DTOs

--- a/src/app/invoice-items/components/edit-invoice-item/edit-invoice-item.component.html
+++ b/src/app/invoice-items/components/edit-invoice-item/edit-invoice-item.component.html
@@ -1,11 +1,11 @@
 <div class="row justify-content-center">
     <div class="col-md-12">
         <div class="card shadow my-5">
-            <h1 class="card-header">Visualisation d'une commande</h1>
+            <h1 class="card-header text-center">Visualisation d'une commande</h1>
             <div class="card-body">
                 <div class="mb-3">
                     <b><label for="name" class="form-label">Nom de l'article</label></b>
-                    <p>{{ invoiceItem.name }}</p>
+                    <p>{{ invoiceItem.productName }}</p>
                 </div>
                 <div class="mb-3">
                     <b><label for="quantity" class="form-label">Quantité : </label></b>
