--- a/src/app/products/components/rate-product/rate-product.component.html
+++ b/src/app/products/components/rate-product/rate-product.component.html
@@ -6,7 +6,7 @@
                 <div class="card-body">
                     <div class="mb-3">
                         <b><label for="name" class="form-label">Nom de l'article :</label></b>
-                        <p>{{ invoiceItem.name }}</p>
+                        <p>{{ invoiceItem.productName }}</p>
                     </div>
                     <div class="mb-3">
                         <b><label for="description" class="form-label">Qu'avez-vous pensé de l'article ?</label></b>
