--- a/src/app/products/components/edit-product/edit-product.component.html
+++ b/src/app/products/components/edit-product/edit-product.component.html
@@ -3,10 +3,10 @@
         <div class="card shadow my-5">
             <form #productForm="ngForm"  (ngSubmit)="saveProduct(productForm)">
                 @if (productId) {
-                    <h1 class="card-header">Modification de l'article</h1>
+                    <h1 class="card-header text-center">Modification de l'article</h1>
                 }
                 @else {
-                    <h1 class="card-header">Ajouter un article</h1>
+                    <h1 class="card-header text-center">Ajouter un article</h1>
                 }
                 <div class="card-body">
                     <div class="mb-3">
