--- a/src/app/products/components/table-products/table-products.component.html
+++ b/src/app/products/components/table-products/table-products.component.html
@@ -1,15 +1,17 @@
 <div class="row justify-content-center">
     <div class="col-md-12">
         <div class="card shadow-lg rounded-3 my-5">
-            <div class="card-header bg-default d-flex justify-content-between align-items-center">
-                <h1 class="mb-0 text-center" >Mes articles</h1>
-                <button
-                    class="btn btn-primary"
-                    [routerLink]="['/products/edit']"
-                    title="Ajouter un article"
-                >
-                    <i class="fas fa-plus"></i> Ajouter
-                </button>
+            <div class="card-header bg-default">
+                <div class="d-flex justify-content-between align-items-center">
+                    <h1 class="mb-0 text-center flex-grow-1">Mes articles</h1>
+                    <button
+                        class="btn btn-primary ms-3"
+                        [routerLink]="['/products/edit']"
+                        title="Ajouter un article"
+                    >
+                        <i class="fas fa-plus"></i> Ajouter
+                    </button>
+                </div>
             </div>
             <div class="card-body">
                 <table class="table table-striped">
