--- a/src/app/products/components/table-rating/table-rating.component.html
+++ b/src/app/products/components/table-rating/table-rating.component.html
@@ -1,8 +1,8 @@
 <div class="row justify-content-center">
     <div class="col-md-12">
         <div class="card shadow-lg rounded-3 my-5">
-            <div class="card-header bg-default d-flex justify-content-between align-items-center">
-                <h1 class="mb-0 text-center" >Mes notes</h1>
+            <div class="card-header bg-default">
+                <h1 class="mb-0 text-center">Mes notes</h1>
             </div>
             <div class="card-body">
                 <table class="table table-striped">
@@ -32,7 +32,7 @@
                                     {{ rating.text }}
                                 </td>
                                 <td>
-                                    {{ rating.invoiceItem.name }}
+                                    {{ rating.productName }}
                                 </td>
                                 <td>
                                     {{ rating.createdAt | date: 'dd/MM/yyyy' }}
