--- a/src/app/products/components/view-product/view-product.component.html
+++ b/src/app/products/components/view-product/view-product.component.html
@@ -71,7 +71,7 @@
                                 <i class="fas fa-user-circle fa-2x text-secondary"></i>
                             </div>
                             <div>
-                                <h6 class="mb-1">{{ comment.invoiceItem.user?.firstname }}</h6>
+                                <h6 class="mb-1">{{ comment.firstName }}</h6>
                                 <div class="text-warning mb-1">
                                     <span *ngFor="let star of [].constructor(rating); let i = index">
                                         <i class="fa fa-star text-warning"></i>
