--- a/src/app/users/components/table-users/table-users.component.html
+++ b/src/app/users/components/table-users/table-users.component.html
@@ -1,7 +1,7 @@
 <div class="row justify-content-center">
     <div class="col-md-12">
         <div class="card shadow-lg rounded-3 my-5">
-            <div class="card-header bg-default d-flex justify-content-between align-items-center">
+            <div class="card-header bg-default">
                 <h1 class="mb-0 text-center" >Utilisateurs</h1>
             </div>
             <div class="card-body">
@@ -12,6 +12,7 @@
                             <th scope="col">Email</th>
                             <th scope="col">Nom</th>
                             <th scope="col">Prénom</th>
+                            <th scope="col">Rôle</th>
                             <th scope="col" class="text-end"></th>
                         </tr>
                     </thead>
@@ -24,6 +25,7 @@
                                 </td>
                                 <td>{{ user.firstname }}</td>
                                 <td>{{ user.lastname }}</td>
+                                <td>{{ getRoleLabel(user.role) }}</td>
                                 <td class="text-end">
                                     <button 
                                         class="btn btn-outline-danger"
