--- a/src/app/accounting/components/financial-report/financial-report.component.html
+++ b/src/app/accounting/components/financial-report/financial-report.component.html
@@ -17,7 +17,7 @@
                         @for (invoiceItem of invoiceItems; track invoiceItem.id; let i = $index) {
                             <tr>
                                 <th>{{ i + 1 }}</th>
-                                <td>{{ invoiceItem.name }}</td>
+                                <td>{{ invoiceItem.productName }}</td>
                                 <td></td>
                             </tr>
                         }
@@ -43,7 +43,7 @@
                         @for (invoiceItem of invoiceItems; track invoiceItem.id; let i = $index) {
                             <tr>
                                 <th>{{ i + 1 }}</th>
-                                <td>{{ invoiceItem.name }}</td>
+                                <td>{{ invoiceItem.productName }}</td>
                                 <td></td>
                             </tr>
                         }
@@ -69,7 +69,7 @@
                         @for (invoiceItem of invoiceItems; track invoiceItem.id; let i = $index) {
                             <tr>
                                 <th>{{ i + 1 }}</th>
-                                <td>{{ invoiceItem.name }}</td>
+                                <td>{{ invoiceItem.productName }}</td>
                                 <td>{{ invoiceItem.quantity }}</td>
                             </tr>
                         }
