--- a/src/app/products/components/table-rating/table-rating.component.html
+++ b/src/app/products/components/table-rating/table-rating.component.html
@@ -13,6 +13,7 @@
                             <th scope="col">Commentaire</th>
                             <th scope="col">Article</th>
                             <th scope="col">Date</th>
+                            <th scope="col">Répondu</th>
                             <th scope="col" class="text-end"></th>
                         </tr>
                     </thead>
@@ -37,6 +38,9 @@
                                 <td>
                                     {{ rating.createdAt | date: 'dd/MM/yyyy' }}
                                 </td>
+                                <td>
+                                    <span *ngIf="rating.commentId" class="badge bg-success">Oui</span>
+                                    <span *ngIf="!rating.commentId" class="badge bg-danger">Non</span>
                                 <td class="text-end">
                                     <button class="btn btn-outline-secondary btn-sm me-2">
                                         <i class="fas fa-comment"></i>
