--- a/src/app/products/components/edit-product/edit-product.component.html
+++ b/src/app/products/components/edit-product/edit-product.component.html
@@ -3,7 +3,7 @@
         <div class="card shadow my-5">
             <form #productForm="ngForm"  (ngSubmit)="saveProduct(productForm)">
                 @if (productId) {
-                    <h1 class="card-header text-center">Modification de l'article</h1>
+                    <h1 class="card-header text-center">Modifier un article</h1>
                 }
                 @else {
                     <h1 class="card-header text-center">Ajouter un article</h1>
