--- a/src/app/authentication/components/login/login.component.html
+++ b/src/app/authentication/components/login/login.component.html
@@ -1,7 +1,7 @@
 <div class="row justify-content-center">
   <div class="col-md-6">
     <div class="card shadow my-5">
-      <h4 class="card-header">Se connecter</h4>
+      <h1 class="card-header text-center">Se connecter</h1>
       <form [formGroup]="loginForm"  (ngSubmit)="login()">
         <div class="card-body">
             <div class="form-group">
