--- a/src/app/invoice-items/components/table-invoice-items/table-invoice-items.component.html
+++ b/src/app/invoice-items/components/table-invoice-items/table-invoice-items.component.html
@@ -26,7 +26,7 @@
                                 <td>{{ invoiceItem.createdAt | date: 'dd/MM/yyyy' }}</td>
                                 <td  class="text-end">
                                     <button class="btn btn-outline-secondary btn-sm me-2" 
-                                        [routerLink]="['/invoice-items/edit', invoiceItem.id]"
+                                        [routerLink]="['/invoice-items',invoiceItem.id, 'edit']"
                                         title="Voir"
                                     >
                                         <i class="fas fa-edit"></i>
