--- a/src/app/invoices/components/table-invoices/table-invoices.component.html
+++ b/src/app/invoices/components/table-invoices/table-invoices.component.html
@@ -35,7 +35,7 @@
                                 <td class="text-end">
                                     <button
                                         class="btn btn-outline-secondary btn-sm me-2"
-                                        [routerLink]="['/invoices/view', invoice.id]"
+                                        [routerLink]="['/invoices', invoice.id, 'view']"
                                         title="Voir"
                                     >
                                         <i class="fas fa-eye"></i>
