--- a/src/app/products/components/shop-products/shop-products.component.html
+++ b/src/app/products/components/shop-products/shop-products.component.html
@@ -96,7 +96,7 @@
                                 </div>
                                 <div class="card-footer text-end">
                                     <button class="btn btn-outline-secondary btn-sm me-2" 
-                                        [routerLink]="['/products/view', product.id]"
+                                        [routerLink]="['/products',  product.id, 'view']"
                                         title="Voir"
                                     >
                                         <i class="fas fa-eye"></i>
