--- a/src/app/products/components/table-products/table-products.component.html
+++ b/src/app/products/components/table-products/table-products.component.html
@@ -40,7 +40,7 @@
                                 <td class="text-end">
                                     <button
                                         class="btn btn-outline-secondary btn-sm me-2"
-                                        [routerLink]="['/products/edit', product.id]"
+                                        [routerLink]="['/products',product.id,'edit']"
                                         *ngIf="showEditButton()"
                                         title="Modifier"
                                     >
@@ -48,7 +48,7 @@
                                     </button>
                                     <button
                                         class="btn btn-outline-danger btn-sm me-2"
-                                        [routerLink]="['/products/edit', product.id]"
+                                        [routerLink]="['/products',product.id,'edit']"
                                         title="Supprimer"
                                         *ngIf="showDeleteButton()"
                                     >
