--- a/src/app/products/components/table-rating/table-rating.component.html
+++ b/src/app/products/components/table-rating/table-rating.component.html
@@ -42,7 +42,9 @@
                                     <span *ngIf="rating.commentId" class="badge bg-success">Oui</span>
                                     <span *ngIf="!rating.commentId" class="badge bg-danger">Non</span>
                                 <td class="text-end">
-                                    <button class="btn btn-outline-secondary btn-sm me-2">
+                                    <button class="btn btn-outline-secondary btn-sm me-2"
+                                    [routerLink]="['/rates', rating.id, 'comment']"
+                                    >
                                         <i class="fas fa-comment"></i>
                                     </button>
                                 </td>
