Change routes to plural

--- a/src/app/authentication/components/register/register.component.html
+++ b/src/app/authentication/components/register/register.component.html
@@ -1,7 +1,7 @@
 <div class="row justify-content-center">
   <div class="col-md-6">
     <div class="card shadow my-5">
-      <h4 class="card-header">Créer un compte</h4>        
+      <h1 class="card-header text-center">Créer un compte</h1>        
       <form [formGroup]="registerForm"  (ngSubmit)="register()">
         <div class="card-body">
           <div class="form-group">
