--- a/src/app/invoices/components/table-invoices/table-invoices.component.html
+++ b/src/app/invoices/components/table-invoices/table-invoices.component.html
@@ -21,7 +21,7 @@
                             <tr>
                                 <th scope="row">{{ i + 1 }}</th>
                                 <td>
-                                    {{ getPrice(invoice) | currency: 'EUR' }}
+                                    {{ getPrice(invoice)}} €
                                 </td>
                                 <td>
                                     {{ getInvoiceStatus(invoice) }}
@@ -35,7 +35,7 @@
                                 <td class="text-end">
                                     <button
                                         class="btn btn-outline-secondary btn-sm me-2"
-                                        [routerLink]="['/invoices', invoice.id, 'view']"
+                                        [routerLink]="[invoice.id]"
                                         title="Voir"
                                     >
                                         <i class="fas fa-eye"></i>
