--- a/src/app/products/components/table-products/table-products.component.html
+++ b/src/app/products/components/table-products/table-products.component.html
@@ -1,65 +1,47 @@
-<div class="row justify-content-center">
-    <div class="col-md-12">
-        <div class="card shadow-lg rounded-3 my-5">
-            <div class="card-header bg-default">
-                <div class="d-flex justify-content-between align-items-center">
-                    <h1 class="mb-0 text-center flex-grow-1">Mes articles</h1>
-                    <button
-                        class="btn btn-primary ms-3"
-                        [routerLink]="['/products/edit']"
-                        title="Ajouter un article"
-                    >
-                        <i class="fas fa-plus"></i> Ajouter
+<div class="card-body">
+    <table class="table table-striped">
+        <thead>
+            <tr>
+                <th scope="col">#</th>
+                <th scope="col">Nom</th>
+                <th scope="col">Prix</th>
+                <th scope="col">Catégorie</th>
+                <th scope="col" class="text-end"></th>
+            </tr>
+        </thead>
+        <tbody>
+            @for  (product of products; track product.id; let i = $index)  {
+                <tr>
+                    <th scope="row">{{ i + 1 }}</th>
+                    <td>
+                        {{ product.name }}
+                    </td>
+                    <td>
+                        {{ product.price }} €
+                    </td>
+                    <td>
+                        {{ product.category }}
+                    </td>
+                    <td class="text-end">
+                        <button
+                            class="btn btn-outline-secondary btn-sm me-2"
+                            (click)="goToProduct(product.id)"
+                            *ngIf="showEditButton()"
+                            title="Modifier"
+                        >
+                            <i class="fas fa-edit"></i>
+                        </button>
+                        <button
+                            class="btn btn-outline-danger btn-sm me-2"
+                            title="Supprimer"
+                            (click)="deleteProduct(product.id)"
+                            *ngIf="showDeleteButton()"
+                        >
+                        <i class="fas fa-trash-alt"></i>
                     </button>
-                </div>
-            </div>
-            <div class="card-body">
-                <table class="table table-striped">
-                    <thead>
-                        <tr>
-                            <th scope="col">#</th>
-                            <th scope="col">Nom</th>
-                            <th scope="col">Prix</th>
-                            <th scope="col">Catégorie</th>
-                            <th scope="col" class="text-end"></th>
-                        </tr>
-                    </thead>
-                    <tbody>
-                        @for  (product of products; track product.id; let i = $index)  {
-                            <tr>
-                                <th scope="row">{{ i + 1 }}</th>
-                                <td>
-                                    {{ product.name }}
-                                </td>
-                                <td>
-                                    {{ product.price }} €
-                                </td>
-                                <td>
-                                    {{ product.category }}
-                                </td>
-                                <td class="text-end">
-                                    <button
-                                        class="btn btn-outline-secondary btn-sm me-2"
-                                        [routerLink]="['/products',product.id,'edit']"
-                                        *ngIf="showEditButton()"
-                                        title="Modifier"
-                                    >
-                                        <i class="fas fa-edit"></i>
-                                    </button>
-                                    <button
-                                        class="btn btn-outline-danger btn-sm me-2"
-                                        [routerLink]="['/products',product.id,'edit']"
-                                        title="Supprimer"
-                                        *ngIf="showDeleteButton()"
-                                    >
-                                    <i class="fas fa-trash-alt"></i>
-                                </button>
-                                </td>
-                            </tr>
-                        }
-                    </tbody>
-                </table>
-            </div>
-        </div>
-    </div>
+                    </td>
+                </tr>
+            }
+        </tbody>
+    </table>
 </div>
