Fix more routes

--- a/src/app/products/pages/artisan-table-products/artisan-table-products.component.html
+++ b/src/app/products/pages/artisan-table-products/artisan-table-products.component.html
@@ -13,7 +13,9 @@
                     </button>
                 </div>
             </div>
-            <app-table-products></app-table-products>
+            <div class="card-body">
+                <app-table-products></app-table-products>
+            </div>
         </div>
     </div>
 </div>
