--- a/src/app/products/pages/artisan-new-product/artisan-new-product.component.html
+++ b/src/app/products/pages/artisan-new-product/artisan-new-product.component.html
@@ -1,1 +1,3 @@
-<app-edit-product></app-edit-product>
+<app-edit-product
+(showSuccessMessage)="showSuccessMessageEmit($event)"
+></app-edit-product>
