--- a/src/app/products/components/view-product/view-product.component.html
+++ b/src/app/products/components/view-product/view-product.component.html
@@ -32,7 +32,7 @@
                         <!-- Ratings -->
                         <div class="mb-3">
                             <h6>Évaluation :</h6>
-                            <div>
+                            <div *ngIf="ratings.length > 0;">
                                 <span *ngFor="let star of [].constructor(rating); let i = index">
                                     <i class="fa fa-star text-warning"></i>
                                 </span>
