--- a/src/app/products/pages/customer-view-product/customer-view-product.component.html
+++ b/src/app/products/pages/customer-view-product/customer-view-product.component.html
@@ -1,1 +1,4 @@
-<app-view-product></app-view-product>
+<app-view-product
+    (showSuccessMessage)="showSuccessMessageEmit($event)"
+    (cartUpdated)="cartUpdatedEmit($event)"
+></app-view-product>
