--- a/src/app/products/pages/artisan-table-ratings/artisan-table-ratings.component.html
+++ b/src/app/products/pages/artisan-table-ratings/artisan-table-ratings.component.html
@@ -1,1 +1,12 @@
-<app-table-ratings></app-table-ratings>
+<div class="row justify-content-center">
+    <div class="col-md-12">
+        <div class="card shadow-lg rounded-3 my-5">
+            <div class="card-header bg-default">
+                <h1 class="mb-0 text-center">Mes notes</h1>
+            </div>
+            <div class="card-body">
+                <app-table-ratings></app-table-ratings>
+            </div>
+        </div>
+    </div>
+</div>
