--- a/src/app/invoices/components/view-invoice/view-invoice.component.html
+++ b/src/app/invoices/components/view-invoice/view-invoice.component.html
@@ -63,12 +63,9 @@
                     <b><label for="deliveryPartner" class="form-label">Transporteur : </label></b>
                     <p>{{ invoice.deliveryPartnerName }}</p>
                 </div>
-            
-            
-            
             </div>
             <div class="card-footer d-flex justify-content-between">
-                <button [routerLink]="['/invoices']" class="btn btn-secondary">
+                <button [routerLink]="['..']" class="btn btn-secondary">
                     <i class="fas fa-arrow-left"></i>   
                     Retour
                 </button>
