--- a/src/app/products/components/view-product/view-product.component.html
+++ b/src/app/products/components/view-product/view-product.component.html
@@ -25,7 +25,7 @@
                         <h3 class="card-title">{{ product.name }}</h3>
                         <p class="text-muted">{{ product.category }}</p>
                         <p class="card-text">
-                            <b>Description :</b> {{ product.description }}
+                            {{ product.description }}
                         </p>
                         <h4 class="text-primary">{{ product.price | currency: 'EUR' }}</h4>
 
