--- a/src/app/users/pages/admin-table-users/admin-table-users.component.html
+++ b/src/app/users/pages/admin-table-users/admin-table-users.component.html
@@ -1,4 +1,4 @@
 <app-table-users
-    (showErrorMessage)="emitShowErrorMessage($event)"
-    (showSuccessMessage)="emitShowSuccessMessage($event)"
+    (showErrorMessage)="ShowErrorMessageEmit($event)"
+    (showSuccessMessage)="ShowSuccessMessageEmit($event)"
 ></app-table-users>
