--- a/src/app/products/pages/delivery-partner-edit-invoice-item/delivery-partner-edit-invoice-item.component.html
+++ b/src/app/products/pages/delivery-partner-edit-invoice-item/delivery-partner-edit-invoice-item.component.html
@@ -1,1 +1,4 @@
-<p>delivery-partner-edit-invoice-item works!</p>
+<app-edit-invoice-item
+    (showErrorMessage)="showErrorMessageEmit($event)"
+    (showSuccessMessage)="showSuccessMessageEmit($event)"
+></app-edit-invoice-item>
